--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -2,31 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>The Basic Language of the Web: HTML</title>
+    <title>The Basic Language of the web: HTML</title>
   </head>
 
   <body>
-    <!--
-    <h1>The Basic Language of the Web: HTML</h1>
-    <h2>The Basic Language of the Web: HTML</h2>
-    <h3>The Basic Language of the Web: HTML</h3>
-    <h4>The Basic Language of the Web: HTML</h4>
-    <h5>The Basic Language of the Web: HTML</h5>
-    <h6>The Basic Language of the Web: HTML</h6>
-    -->
+    <!-- <h1>The Basic Language of the web: HTML</h1>
+    <h2>The Basic Language of the web: HTML</h2>
+    <h3>The Basic Language of the web: HTML</h3>
+    <h4>The Basic Language of the web: HTML</h4>
+    <h5>The Basic Language of the web: HTML</h5>
+    <h6>The Basic Language of the web: HTML</h6> -->
 
-    <header class="main-header">
+    <header>
       <h1>📘 The Code Magazine</h1>
 
       <nav>
-        <a href="blog.html">Blog</a>
+        <a href="./blog.html">BLOG</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
-        <a href="#">CSS Grid</a>
+        <a href="#">CSS</a>
       </nav>
-
-      <p>Test paragraph</p>
     </header>
 
     <article>
@@ -34,18 +29,15 @@
         <h2>The Basic Language of the Web: HTML</h2>
 
         <img
-          src="img/laura-jones.jpg"
+          src="./Images/laura-jones.jpg"
           alt="Headshot of Laura Jones"
-          height="50"
           width="50"
+          height="50"
         />
 
-        <p id="author">
-          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
-        </p>
-
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
         <img
-          src="img/post-img.jpg"
+          src="./Images/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -53,31 +45,28 @@
       </header>
 
       <p>
-        All modern websites and web applications are built using three
+        All <b>modern websites</b> and web applications are built using three
         <em>fundamental</em>
         technologies: HTML, CSS and JavaScript. These are the languages of the
         web.
       </p>
-
       <p>
         In this post, let's focus on HTML. We will learn what HTML is all about,
         and why you too should learn it.
       </p>
 
-      <h3>What is HTML?</h3>
+      <h3>What is HTML</h3>
       <p>
-        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+        HTML stands for <strong>H</strong>yper <strong>T</strong>ext
         <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
         language that web developers use to structure and describe the content
         of a webpage (not a programming language).
       </p>
       <p>
         HTML consists of elements that describe different types of content:
-        paragraphs, links, headings, images, video, etc. Web browsers understand
-        HTML and render HTML code as websites.
+        paragraphs, links, headings
       </p>
       <p>In HTML, each element is made up of 3 parts:</p>
-
       <ol>
         <li>The opening tag</li>
         <li>The closing tag</li>
@@ -85,7 +74,7 @@
       </ol>
 
       <p>
-        You can learn more at
+        You can learn more at the
         <a
           href="https://developer.mozilla.org/en-US/docs/Web/HTML"
           target="_blank"
@@ -101,14 +90,13 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li>To be able to use the fundamental web dev language></li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
         </li>
         <li>To build web applications</li>
-        <li>To impress friends</li>
-        <li>To have fun 😃</li>
+        <li>To impress friends To have fun 😃</li>
       </ul>
 
       <p>Hopefully you learned something new here. See you next time!</p>
@@ -116,40 +104,46 @@
 
     <aside>
       <h4>Related posts</h4>
-
-      <u class="related">
+      <ul>
         <li>
-          <img
-            src="img/related-1.jpg"
-            alt="Person programming"
-            width="75"
-            width="75"
-          />
-          <a href="#">How to Learn Web Development</a>
-          <p class="related-author">By Jonas Schmedtmann</p>
+          <div>
+            <img
+              src="./Images/related-1.jpg"
+              alt="img1"
+              width="75"
+              height="75"
+            />
+            <a href="#">How to Learn Web Development</a>
+          </div>
+          <div><p>By Jonas Schmedtmann</p></div>
         </li>
         <li>
-          <img src="img/related-2.jpg" alt="Lightning" width="75" heigth="75" />
-          <a href="#">The Unknown Powers of CSS</a>
-          <p class="related-author">By Jim Dillon</p>
+          <div>
+            <img
+              src="./Images/related-2.jpg"
+              alt="img2"
+              width="75"
+              height="75"
+            />
+            <a href="#">The Unknown Powers of CSS</a>
+          </div>
+          <div><p>By Jim Dillon</p></div>
         </li>
         <li>
-          <img
-            src="img/related-3.jpg"
-            alt="JavaScript code on a screen"
-            width="75"
-            height="75"
-          />
-          <a href="#">Why JavaScript is Awesome</a>
-          <p class="related-author">By Matilda</p>
+          <div>
+            <img
+              src="./Images/related-3.jpg"
+              alt="img3"
+              width="75"
+              height="75"
+            />
+            <a href="#">Why JavaScript is Awesome</a>
+          </div>
+          <div><p>By Matilda</p></div>
         </li>
-      </u>
+      </ul>
     </aside>
 
-    <footer>
-      <p id="copyright" class="copyright text">
-        Copyright &copy; 2027 by The Code Magazine.
-      </p>
-    </footer>
+    <footer>Copyright &copy;</footer>
   </body>
 </html>
