--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -36,10 +36,29 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 32px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+
+        column-gap: 20px;
+        row-gap: 40px;
+        display: none;
+      }
+
+      .el--8 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+      }
+
+      .el--2 {
+        /* grid-column: 1 / span 4; */
+        grid-column: 1 / -1;
+        grid-row: 2;
       }
 
       .container--2 {
@@ -47,12 +66,28 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+
+        /* Aligning tracks inside container: distribute empty space */
+        justify-content: center;
+        align-content: center;
+
+        /* ALIGNING ITEMS INSIDE CELLS */
+        align-items: center;
+        justify-items: center;
+      }
+
+      .el--3 {
+        align-self: start;
+        justify-self: start;
       }
     </style>
   </head>
@@ -64,7 +99,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
